welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
              ^lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
                                   ^lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
                                                       ^lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
                                                                             ^lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
                                                                                                  ^lessBy10:2: error: object Abs is not a member of package math
  return math.Abs(a-10)<=b || math.Abs(a-10)<=c ||math.Abs( b-10)<=a || math.Abs(b-10)<=c || math.Abs(c-10)<=b || math.Abs(c-10)<=a
                                                                                                                       ^